part4/main-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-main-app
spec:
  type: ClusterIP
  selector:
    app: dwk-main-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
